--- a/EasyFood/app/src/main/res/layout/fragment_almuerzo.xml
+++ b/EasyFood/app/src/main/res/layout/fragment_almuerzo.xml
@@ -32,7 +32,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_alignParentTop="true"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/carnealaparrillaservidaconpapasfritas" />
+                app:srcCompat="@drawable/carnealaparrillaservidaconpapasfritas"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_1"
@@ -61,7 +62,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_1"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/carnetiernayalinoapunto" />
+                app:srcCompat="@drawable/carnetiernayalinoapunto"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_2"
@@ -92,7 +94,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_2"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/carpachiodecarne" />
+                app:srcCompat="@drawable/carpachiodecarne"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_3"
@@ -124,7 +127,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_3"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/cevicheperuano" />
+                app:srcCompat="@drawable/cevicheperuano"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_4"
@@ -155,7 +159,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_4"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/chuletonahumadocasero" />
+                app:srcCompat="@drawable/chuletonahumadocasero"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_5"
@@ -186,7 +191,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_5"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/faisanalawalkirya" />
+                app:srcCompat="@drawable/faisanalawalkirya"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_6"
@@ -217,7 +223,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_6"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/gambastigreaalaparrilla" />
+                app:srcCompat="@drawable/gambastigreaalaparrilla"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_7"
@@ -248,7 +255,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_7"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/nusryhamburguesa" />
+                app:srcCompat="@drawable/nusryhamburguesa"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_8"
@@ -279,7 +287,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_8"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/pescadodeldia" />
+                app:srcCompat="@drawable/pescadodeldia"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_9"
@@ -310,7 +319,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_almuerzo_9"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/tomahawk" />
+                app:srcCompat="@drawable/tomahawk"
+                android:onClick="AgregarAlmuerzo"/>
 
             <TextView
                 android:id="@+id/producto_almuerzo_10"
