--- a/EasyFood/app/src/main/res/layout/activity_main.xml
+++ b/EasyFood/app/src/main/res/layout/activity_main.xml
@@ -65,7 +65,8 @@
                 android:layout_height="@dimen/image_height"
                 android:padding="@dimen/padding_regular"
                 android:layout_below="@id/imagen_producto_1"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_2"
@@ -84,7 +85,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_2"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_3"
@@ -103,7 +105,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_3"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_4"
@@ -122,7 +125,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_4"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_5"
@@ -141,7 +145,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_5"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_6"
@@ -160,7 +165,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_6"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_7"
@@ -179,7 +185,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_7"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_8"
@@ -198,7 +205,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_8"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_9"
@@ -217,7 +225,8 @@
                 android:layout_height="@dimen/image_height"
                 android:layout_below="@id/imagen_producto_9"
                 android:padding="@dimen/padding_regular"
-                app:srcCompat="@drawable/ic_photo_empty" />
+                app:srcCompat="@drawable/ic_photo_empty"
+                android:longClickable="true"/>
 
             <TextView
                 android:id="@+id/nombre_10"
